--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ plainwhite:
 
   # generate social links in footer
   social_links:
-    twitter: thelehhman
-    github:  thelehhman
-    linkedIn: in/thelehhman
+    twitter: chenyaoze666
+    github:  chenyaoze666
+    linkedIn: in/chenyaoze666
     rss: rss
     # dribbble: jekyll
     # facebook: jekyll
